# FUN-POINTS

./: Makefile  Makefile.am  Makefile.in  NOTES  configure  configure.in  data_types.f90  main.f90  mkplot.pl  monitor.pl  oder  optimization.f90  points.f90  sort.f90  stick.f90
